--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "firebase": "^5.10.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
-    "react-redux-firebase": "^2.2.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
-    "redux-firestore": "^0.7.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
@@ -39,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://europe-west2-poll-manager.cloudfunctions.net/api"
 }
